fix: 🪱 glitching blur overlay

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -157,7 +157,8 @@
 }
 
 .transition-colors {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-property: color, background-color, border-color,
+    text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -168,4 +169,19 @@
 
 .kickkit-blur {
   @apply relative filter blur-md hover:filter-none;
+}
+
+.kickkit-image-container {
+  position: relative;
+  display: flex;
+}
+
+.kickkit-blur-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(10px); /* Adjust the blur intensity as needed */
+  z-index: 1; /* Make sure the blur overlay is on top of the image */
 }
