chore: 🤖 code clean-up

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,8 @@
+@import './button.css';
+@import './dialog.css';
+@import './tabs.css';
+@import './switch.css';
+
 :root {
   --background: 0 0% 100%;
   --foreground: 222.2 47.4% 11.2%;
@@ -64,80 +69,8 @@
   --radius: 0.5rem;
 }
 
-.button-base {
-  @apply inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50;
-}
-
-.button-default {
-  @apply bg-primary text-primary-foreground hover:bg-primary/90;
-}
-
-.button-destructive {
-  @apply bg-destructive text-destructive-foreground hover:bg-destructive/90;
-}
-
-.button-outline {
-  @apply border border-input bg-background hover:bg-accent hover:text-accent-foreground;
-}
-
-.button-secondary {
-  @apply bg-secondary text-secondary-foreground hover:bg-secondary/80;
-}
-
-.button-ghost {
-  @apply hover:bg-accent hover:text-accent-foreground;
-}
-
-.button-link {
-  @apply text-primary underline-offset-4 hover:underline;
-}
-
 .muted-paragraph {
   @apply text-muted-foreground;
-}
-
-.dialog-overlay {
-  @apply fixed inset-0 z-[999] bg-background/80 backdrop-blur-sm data-[state=open]:visible data-[state=closed]:hidden data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0;
-}
-
-.dialog-content {
-  @apply fixed left-[50%] top-[50%] z-[999] w-full max-w-[625px] translate-x-[-50%] translate-y-[-50%] bg-background shadow-lg duration-200 data-[state=open]:visible data-[state=closed]:hidden data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 data-[state=closed]:slide-out-to-left-1/2 data-[state=closed]:slide-out-to-top-[48%] data-[state=open]:slide-in-from-left-1/2 data-[state=open]:slide-in-from-top-[48%] sm:rounded-lg md:w-full;
-}
-
-.dialog-close {
-  @apply absolute right-4 top-4 rounded-sm opacity-70 ring-offset-background transition-opacity hover:opacity-100 focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:pointer-events-none data-[state=open]:bg-accent data-[state=open]:text-muted-foreground;
-}
-
-.dialog-header {
-  @apply flex flex-row items-center space-y-1.5 text-center sm:text-left bg-secondary px-3 py-4 rounded-t-sm;
-}
-
-.dialog-footer {
-  @apply flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2;
-}
-
-.dialog-title {
-  @apply text-lg font-semibold leading-none tracking-tight;
-}
-
-.dialog-desc {
-  @apply text-sm text-gray-500 dark:text-gray-400;
-}
-
-.tab-list-container {
-  @apply bg-muted;
-}
-
-.tabs-list {
-  @apply flex items-center justify-center bg-muted text-muted-foreground pt-4;
-}
-
-.tabs-trigger {
-  @apply inline-flex items-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-primary/10 data-[state=active]:text-foreground data-[state=active]:shadow-sm;
-}
-
-.tabs-content {
-  @apply w-full min-h-[400px] max-h-[400px] pt-4 px-3 outline-none;
 }
 
 .scrollarea-thumb {
@@ -146,20 +79,6 @@
 
 .separator {
   @apply shrink-0 bg-border;
-}
-
-.switch-base {
-  @apply inline-flex h-[24px] w-[44px] shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input;
-}
-
-.switch-thumb {
-  @apply pointer-events-none block h-5 w-5 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-5 data-[state=unchecked]:translate-x-0;
-}
-
-.transition-colors {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
 }
 
 .kickkit-token {
@@ -172,4 +91,10 @@
 
 .kickkit-blur-overlay {
   @apply absolute top-0 left-0 w-full h-full backdrop-blur-lg hover:backdrop-blur-none z-[1];
+}
+
+.transition-colors {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
