--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,7 @@
 @import './tabs.css';
 @import './switch.css';
 @import './hover-card.css';
+@import './card.css';
 
 :root {
   --background: 0 0% 100%;
@@ -17,7 +18,7 @@
   --border: 214.3 31.8% 91.4%;
   --input: 214.3 31.8% 91.4%;
 
-  --card: 0 0% 100%;
+  --card: 195 15% 5%;
   --card-foreground: 222.2 47.4% 11.2%;
 
   --primary: 222.2 47.4% 11.2%;
@@ -53,7 +54,7 @@
   --border: 216 34% 17%;
   --input: 216 34% 17%;
 
-  --card: 224 71% 4%;
+  --card: 195 15% 5%;
   --card-foreground: 213 31% 91%;
 
   --primary: 210 40% 98%;
@@ -98,4 +99,8 @@
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.important-no-underline {
+  text-decoration-line: none !important;
 }
