chore: 🤖 the class was in fact useful

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -100,3 +100,7 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+
+.important-no-underline {
+  text-decoration-line: none !important;
+}
