--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -14,6 +14,10 @@
   @apply text-xs text-muted-foreground/40;
 }
 
+.card-image {
+  @apply object-cover object-center max-h-16 max-w-[80px];
+}
+
 .card-content {
   @apply p-1.5;
 }
