feat: 🎸 handle video-seeker error, fallback and loading state

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,7 @@
 @import './switch.css';
 @import './hover-card.css';
 @import './card.css';
+@import './skeleton.css';
 
 :root {
   --background: 0 0% 100%;
@@ -103,4 +104,13 @@
 
 .important-no-underline {
   text-decoration-line: none !important;
+}
+
+@keyframes pulse {
+  50% {
+    opacity: 0.5;
+  }
+}
+.animate-pulse {
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
