feat: 🎸 hiding emote holder

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -96,6 +96,10 @@
   @apply absolute top-0 left-0 w-full h-full backdrop-blur-lg hover:backdrop-blur-none z-[1];
 }
 
+.kickkit-hidden {
+  display: none !important;
+}
+
 .transition-colors {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
